@@ -3,6 +3,8 @@
 	* src/query.h, src/query.cpp: add functions getCandidateVector and
 	getCandiateRows (per request of Nan Zhou <nanzhou1987 at
 	hotmail.com>)
+	* src/bitvector.h, src/bitvector64.h: modify copy_runs and
+	copy_runsn to skip zero-length fills
 
 2012-05-07 John Wu <John dot Wu at ACM dot org>
 	* src/bitvector64.cpp: add extract checks in bitwise logical
